# rs_protobuf

./: Cargo.toml  README.md  build.rs
proto/: my_service.proto
src/client/: main.rs
src/server/: main.rs
