[package]
name = "rs_protobuf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[dependencies]
tonic = "0.8.3"
prost = "0.11.6"
tokio = {version = "1.25.0", features = ["rt-multi-thread"]}

[build-dependencies]
tonic-build = "0.8.4"